crates/aerro/tests/ui/fail/system_public.rs
use aerro;

#[aerro::operation]
pub enum E {
    #[aerro(category = "system", code = "internal", exposure = "public")]
    Bad,
}

fn main() {}
